# toon-python

./: .gitignore  README.md  pyproject.toml
tests/: test_encode.py
toon/: __init__.py  constants.py  encoders.py  normalize.py  primitives.py  types.py  writer.py
toon.egg-info/: PKG-INFO  SOURCES.txt
toon_encoder.egg-info/: PKG-INFO  SOURCES.txt
