[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toon-encoder"
version = "0.1.0"
description = "Token-Oriented Object Notation encoder for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Johan Vlassak" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/alpacaswillrule/toon-python?tab=readme-ov-file"
Repository = "https://github.com/alpacaswillrule/toon-python?tab=readme-ov-file"

[tool.setuptools]
packages = ["toon"]
